fix: hover on dark mode for the checkboxes
In dark mode, when hovering over the checkbox, the font made the text to dark.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -57,3 +57,7 @@
     font-family: 'Lato', sans-serif;
     color: var(--vt-c-text-light-2) !important;
   }
+
+  .checkbox:hover {
+    color: inherit;
+  }
